# serializer version: 1
# name: test_centered_softmax_forward_snapshot
  dict({
    'dtype': 'float64',
    'shape': tuple(
      5,
    ),
    'sum': 1.0,
    'values': list([
      0.13333333333333333,
      0.20000000000000004,
      0.26666666666666666,
      0.3333333333333333,
      0.06666666666666667,
    ]),
  })
# ---
# name: test_discrete_nonstationary_diagonal_snapshot
  dict({
    'coefficients_shape': tuple(
      7,
      4,
      3,
    ),
    'design_matrix_shape': tuple(
      7,
      7,
    ),
    'transition_matrix': dict({
      'diagonal': None,
      'dtype': 'float64',
      'max': 0.95,
      'mean': 0.25,
      'min': 0.01666666666666668,
      'row_sums': list([
        list([
          1.0,
          1.0,
          1.0,
          1.0,
        ]),
        list([
          1.0,
          1.0,
          1.0,
          1.0,
        ]),
        list([
          1.0,
          1.0,
          1.0,
          1.0,
        ]),
        list([
          1.0,
          1.0,
          1.0,
          1.0,
        ]),
        list([
          1.0,
          1.0,
          1.0,
          1.0,
        ]),
        list([
          1.0,
          1.0,
          1.0,
          1.0,
        ]),
        list([
          1.0,
          1.0,
          1.0,
          1.0,
        ]),
      ]),
      'shape': tuple(
        7,
        4,
        4,
      ),
      'std': 0.37583240945932267,
      'values': 'too_large',
    }),
    'transition_matrix_time_0': list([
      list([
        0.9,
        0.033333333333333326,
        0.033333333333333326,
        0.033333333333333326,
      ]),
      list([
        0.05000000000000001,
        0.85,
        0.05000000000000001,
        0.05000000000000001,
      ]),
      list([
        0.033333333333333326,
        0.033333333333333326,
        0.9,
        0.033333333333333326,
      ]),
      list([
        0.01666666666666668,
        0.01666666666666668,
        0.01666666666666668,
        0.95,
      ]),
    ]),
    'transition_matrix_time_last': list([
      list([
        0.9,
        0.033333333333333326,
        0.033333333333333326,
        0.033333333333333326,
      ]),
      list([
        0.05000000000000001,
        0.85,
        0.05000000000000001,
        0.05000000000000001,
      ]),
      list([
        0.033333333333333326,
        0.033333333333333326,
        0.9,
        0.033333333333333326,
      ]),
      list([
        0.01666666666666668,
        0.01666666666666668,
        0.01666666666666668,
        0.95,
      ]),
    ]),
  })
# ---
# name: test_discrete_stationary_custom_snapshot
  dict({
    'diagonal': list([
      0.7,
      0.75,
      0.7,
    ]),
    'dtype': 'float64',
    'max': 0.75,
    'mean': 0.3333333333333333,
    'min': 0.1,
    'row_sums': list([
      0.9999999999999999,
      1.0,
      1.0,
    ]),
    'shape': tuple(
      3,
      3,
    ),
    'std': 0.27386127875258304,
    'values': list([
      list([
        0.7,
        0.2,
        0.1,
      ]),
      list([
        0.15,
        0.75,
        0.1,
      ]),
      list([
        0.1,
        0.2,
        0.7,
      ]),
    ]),
  })
# ---
# name: test_discrete_stationary_diagonal_snapshot
  dict({
    'diagonal': list([
      0.92,
      0.88,
      0.9,
      0.96,
    ]),
    'dtype': 'float64',
    'max': 0.96,
    'mean': 0.25,
    'min': 0.013333333333333345,
    'row_sums': list([
      0.9999999999999999,
      1.0,
      1.0,
      1.0,
    ]),
    'shape': tuple(
      4,
      4,
    ),
    'std': 0.3843175770115127,
    'values': list([
      list([
        0.92,
        0.026666666666666655,
        0.026666666666666655,
        0.026666666666666655,
      ]),
      list([
        0.04,
        0.88,
        0.04,
        0.04,
      ]),
      list([
        0.033333333333333326,
        0.033333333333333326,
        0.9,
        0.033333333333333326,
      ]),
      list([
        0.013333333333333345,
        0.013333333333333345,
        0.013333333333333345,
        0.96,
      ]),
    ]),
  })
# ---
# name: test_estimate_joint_distribution_snapshot
  dict({
    'dtype': 'float64',
    'first_timestep': list([
      list([
        0.46382919214353197,
        0.11699639627738014,
        0.008153365171248352,
      ]),
      list([
        0.012293366103698236,
        0.2811466227933202,
        0.001728779554630212,
      ]),
      list([
        0.006255695673412677,
        0.01262350645270809,
        0.015834958171851713,
      ]),
    ]),
    'last_timestep': list([
      list([
        0.081082849072657,
        0.04537739855928671,
        0.1848864515808999,
      ]),
      list([
        0.002313098816205023,
        0.11736873663004165,
        0.04219492898192635,
      ]),
      list([
        0.0017755858124113265,
        0.007949544546842935,
        0.5830156935624333,
      ]),
    ]),
    'mean': 0.19016966095511184,
    'shape': tuple(
      9,
      3,
      3,
    ),
    'std': 0.4548971589691754,
    'sum_per_timestep': list([
      0.9188618823417816,
      2.4380232803812274,
      2.306953267382246,
      1.3949208133543514,
      4.136956636013112,
      0.9646152101856786,
      0.9988052794984429,
      1.1786418806445167,
      1.0659642875627042,
    ]),
  })
# ---
# name: test_get_transition_prior_snapshot
  dict({
    'diagonal': list([
      2.0,
      2.5,
      3.0,
      3.5,
    ]),
    'dtype': 'float64',
    'max': 3.5,
    'mean': 1.8125,
    'min': 1.5,
    'row_sums': list([
      6.5,
      7.0,
      7.5,
      8.0,
    ]),
    'shape': tuple(
      4,
      4,
    ),
    'std': 0.6091746465505602,
    'values': list([
      list([
        2.0,
        1.5,
        1.5,
        1.5,
      ]),
      list([
        1.5,
        2.5,
        1.5,
        1.5,
      ]),
      list([
        1.5,
        1.5,
        3.0,
        1.5,
      ]),
      list([
        1.5,
        1.5,
        1.5,
        3.5,
      ]),
    ]),
  })
# ---
# name: test_make_transition_from_diag_snapshot
  dict({
    'diagonal': list([
      0.9,
      0.85,
      0.8,
      0.95,
    ]),
    'dtype': 'float64',
    'max': 0.95,
    'mean': 0.25,
    'min': 0.01666666666666668,
    'row_sums': list([
      1.0,
      1.0,
      1.0,
      1.0,
    ]),
    'shape': tuple(
      4,
      4,
    ),
    'std': 0.362284418654736,
    'values': list([
      list([
        0.9,
        0.033333333333333326,
        0.033333333333333326,
        0.033333333333333326,
      ]),
      list([
        0.05000000000000001,
        0.85,
        0.05000000000000001,
        0.05000000000000001,
      ]),
      list([
        0.06666666666666665,
        0.06666666666666665,
        0.8,
        0.06666666666666665,
      ]),
      list([
        0.01666666666666668,
        0.01666666666666668,
        0.01666666666666668,
        0.95,
      ]),
    ]),
  })
# ---
